<resources>
    <string name="app_name">PLDS</string>
    <string name="title_activity_main">PLDS</string>
    <string name="validate_username_err">Enter Your Username Please.</string>
    <string name="validate_pass_err">Enter Your Password Please.</string>
    <string name="doc_ref_no_validate_err">Enter Document Reference NO</string>
    <string name="change_base_url">Change Base Url</string>
    <string name="clear_list">Clear List</string>
    <string name="there_is_no_document_in_the_list_yet">There Is No Document In The List Yet.</string>
    <string name="add_automatically_to_list_after_scan">Add To List Automatically After Scan</string>
    <string name="select_from_list">Select From List</string>
    <string name="documents_list">Documents List</string>
    <string name="document_step">Document Step</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="back">Back</string>
    <string name="browse_file">Browse File…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="update_document_progress">Update Document Progress</string>
    <string name="prosource_technology">Prosource Technologies</string>
    <string name="check_document_reference_no">Check Document Reference NO</string>
    <string name="check_progress">Check Progress</string>
    <string name="comment">Comment</string>
    <string name="close">Close</string>
    <string name="report_issue">Report Issue  &amp; Comment</string>
    <string name="submit">Submit</string>
    <string name="result_form">Result Form</string>
    <string name="item_removed">Item Removed.</string>
    <string name="undo">UNDO</string>
    <string name="all_items_deleted">All Items Deleted.</string>
    <string name="doc_exist">Document Already Exist.</string>
    <string name="check_document_status">Check Document Status</string>
    <string name="scan_qr_code">Scan Document QR Code</string>
    <string name="doc_ref_no_not_detected">Document Reference NO Not Detected.</string>
    <string name="no_data_for_docs">There Is No Data For These Documents.</string>
    <string name="last_login_info">Last Login Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="field_mandatory">This Field Is Mandatory.</string>
    <string name="gps_not_available">Gps Data Not Available.</string>
    <string name="select_right_sherrif">Select Right Sheriff</string>
    <string name="select_right_court">Select Right Court</string>
    <string name="accept_loc_permission">Please Accept Location Permission.</string>
    <string name="file_ext_err">File Extension Is Not Acceptable.</string>
    <string name="file_size_err">File Is Too Large Or Too Small.</string>
    <string name="title_frag_submit_form">Submit Result</string>
    <string name="sign_out_question">Are You Sure To Sign Out?</string>
    <string name="multi_doc_note">Note: Below information will be applied for all documents.</string>
    <string name="main_url">Main url</string>
    <string name="login_url">Login url</string>
    <string name="not_valid">Not valid</string>
    <string name="save_and_restart">Save and restart</string>
    <string name="check_in">Check In</string>
    <string name="manual_functionality">Manual Functionality</string>
    <string name="court">Court</string>
    <string name="sheriff">Sheriff</string>
    <string name="plds_attorney">PLDS Attorney</string>
    <string name="manual">Manual</string>
    <string name="go">Go</string>
    <string name="mange_document">Manage Document</string>
    <string name="tacking_history">Tracking History</string>
    <string name="manage_document">Manage Document</string>
    <string name="document_status_history">Document Status History</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="responded_fields">Responded Fields</string>
    <string name="report_issue_in_general">Common Action</string>
    <string name="report_issue_per_document">Report Issue</string>
    <string name="check_out">Check Out</string>
    <string name="looking_for_gps">Looking For Location…</string>
    <string name="doc_list_on_location">List Of Documents</string>
    <string name="reset_check_in">Solve Check-In Problem</string>
    <string name="reset_check_in_title">Reset Check In/Out Status</string>
    <string name="reset_check_in_message">If You Have Issue With Check In Or Check Out, Press Reset Button.\n\nNote: By Doing This Action Your Currently Check In Status Will Be Lose!</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="no_document_found">No Document Found</string>
    <string name="loading">Loading…</string>
    <string name="environments">Environments</string>
    <string name="please_check_out_first">Please Check Out First</string>
    <string name="save_image">Save Image</string>
    <string name="image_name">Image Name</string>
    <string name="image_saved_successfully">Image Saved Successfully</string>
    <string name="save_image_failed">Save Image Failed, Try Again…</string>
    <string name="permission_denied">Please Accept Permissions To Continue</string>
    <string name="choose_name_for_image">Enter Name Of The Picture</string>
    <string name="grnat_permission">Grant Permission</string>
    <string name="show_image">Show Image</string>
    <string name="image_exist_error">A Picture With This Name Exist, Try Another Name</string>

</resources>
