<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="rezaei.mohammad.plds.views.manualfunctionality.ManualFunctionalityViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/manual_functionality"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radgManualFunc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCardTitle">


                    <RadioButton
                        android:id="@+id/radCourt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/court" />

                    <RadioButton
                        android:id="@+id/radSheriff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sheriff" />

                    <RadioButton
                        android:id="@+id/radAttorney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plds_attorney" />

                    <RadioButton
                        android:id="@+id/radManual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manual" />
                </RadioGroup>


                <com.tiper.MaterialSpinner
                    android:id="@+id/spnCourtSheriffList"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:errorIconDrawable="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radgManualFunc"
                    app:searchable="true"
                    app:spinnerMode="dialog"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{(view) -> viewmodel.submitForm(radgManualFunc.getCheckedRadioButtonId())}"
                    android:text="@string/go"
                    android:textAllCaps="false"
                    android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spnCourtSheriffList" />

                <TextView
                    android:id="@+id/txtFormError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorFail"
                    android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
                    app:layout_constraintStart_toEndOf="@+id/btnSubmit"
                    tools:text="ّForm Error" />

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtFormError"
                    app:layout_constraintTop_toBottomOf="@+id/spnCourtSheriffList" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</layout>
