<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="rezaei.mohammad.plds.views.addMultiDoc.AddMultiDocViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.addMultiDoc.AddMultiDocFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/documents_list"
                android:textColor="#FF9800"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDocRefrence"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:endIconClick="@{(view) -> viewmodel.addToList(inputDocRefrence.getEditText().getText().toString())}"
                app:endIconDrawable="@drawable/ic_add_box"
                app:endIconMode="custom"
                app:endIconTint="@color/colorAccent"
                app:errorEnabled="@{(viewmodel.docRefNoErr == 0) ? false : true}"
                app:errorIconDrawable="@null"
                app:errorText="@{viewmodel.docRefNoErr}"
                app:layout_constraintEnd_toStartOf="@+id/btnReadQR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMessage">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Document reference NO"
                    android:inputType="textCapCharacters"
                    android:text="@{viewmodel.docRefNo}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSelectFromList"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_from_list"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputDocRefrence" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReadQR"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minWidth="48dp"
                app:icon="@drawable/ic_qr_code"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="36dp"
                app:layout_constraintBottom_toBottomOf="@+id/inputDocRefrence"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/chkAutoAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewmodel.autoCheckAfterCodeDetect}"
                android:text="@string/add_automatically_to_list_after_scan"
                app:layout_constraintStart_toStartOf="@+id/inputDocRefrence"
                app:layout_constraintTop_toBottomOf="@+id/inputDocRefrence" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listDocs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="true"
                app:items="@{viewmodel.documentsList}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkAutoAdd"
                android:maxHeight="300dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintHeight_max="300dp"
                app:layout_constraintHeight_min="50dp"
                tools:itemCount="5"
                tools:listitem="@layout/item_document" />

            <TextView
                android:id="@+id/noDocPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/there_is_no_document_in_the_list_yet"
                android:visibility="@{viewmodel.documentsList.empty ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/btnClearList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/listDocs" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClearList"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> viewmodel.fakeClearList()}"
                android:text="@string/clear_list"
                android:textAllCaps="false"
                android:visibility="@{viewmodel.documentsList.empty ? View.GONE : View.VISIBLE}"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listDocs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
